TEST_PROGRAMS/VALID/04/tricky-comments.go
package trickyComments

var x = 3 /* lol

*/ var z = 4
