TEST_PROGRAMS/INVALID/15/operators1.go
/* illegal use of ++ and -- */

package error

var x = 1 +- 2 -+ 3 -- 4 ++ 5 / 6
